--- a/documentation/users-guide.ipynb
+++ b/documentation/users-guide.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1dc0c995-6d1a-450b-bde1-f824aec12604",
+   "metadata": {},
+   "source": [
+    "### `benchmark` User's Guide\n",
+    "\n",
+    "- [Data](#Data)\n",
+    "- [Consistency](#Consistency)\n",
+    "- [Evaluation](#Evaluation)\n",
+    "- [Objective](#Objective)\n",
+    "- [Linear Constraint](#Linear)\n",
+    "- [Quadratic Constraint](#Quadratic)\n",
+    "- [Solvers](#Solvers)\n",
+    "- [Tuning](#Tuning)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "5a5ca30a-b644-4723-a48d-59c5e32c2f51",
    "metadata": {},
    "outputs": [],
@@ -38,7 +55,7 @@
    "id": "4acd4d9e-fb72-4148-95c0-b70fe9f47f9e",
    "metadata": {},
    "source": [
-    "#### Data \n",
+    "#### Data <a name='Data'></a>\n",
     "\n",
     "We have data from the World Bank containing Gross Domestic Product. The dataset has 60 years of annual records spanning 1960 to 2020. We focus on the GDP of Australia and Brazil. "
    ]
@@ -139,7 +156,7 @@
    "id": "b36d3d7b-5f9e-4ab1-8177-167da6641983",
    "metadata": {},
    "source": [
-    "#### Consistency \n",
+    "#### Consistency <a name='Consistency'></a>\n",
     "\n",
     "We check the `benchmark` package is consistent with the `statsmodels` package."
    ]
@@ -209,7 +226,7 @@
    "source": [
     "Note that the predictions of the `benchmark` library match the predictions of the `statsmodels` library.\n",
     "\n",
-    "#### Evaluation\n",
+    "#### Evaluation <a name='Evaluation'></a>\n",
     "\n",
     "We want to assess the predictions with metrics."
    ]
@@ -334,7 +351,7 @@
    "source": [
     "The projection is accessible with the `projection` attribute.\n",
     "\n",
-    "#### Objective\n",
+    "#### Objective <a name='Objective'></a>\n",
     "\n",
     "A subject matter expert can help us to determine the high-frequency dataset. If we lack a high frequency dataset, then we can use a constant value like 1."
    ]
@@ -421,7 +438,7 @@
    "id": "32f2f814-8619-492f-a124-f16a3b59dbc2",
    "metadata": {},
    "source": [
-    "#### Linear Constraints\n",
+    "#### Linear Constraints <a name='Linear'></a>\n",
     "\n",
     "Unlike the `statsmodels` package, the `benchmark` package allows us to change the linear constraints."
    ]
@@ -514,7 +531,7 @@
    "id": "1fec1878-e4f3-4b2c-9710-4f58726bf65e",
    "metadata": {},
    "source": [
-    "#### Quadratic Constraint  \n",
+    "#### Quadratic Constraint <a name='Quadratic'></a> \n",
     "\n",
     "Unlike the `statsmodels` package, the `benchmark` package allows us to add a quadratic constraints."
    ]
@@ -743,7 +760,7 @@
    "id": "1360d0ff-66c4-4059-8140-7e0b7dbe5c5a",
    "metadata": {},
    "source": [
-    "#### Solvers\n",
+    "#### Solvers <a name='Solvers'></a>\n",
     "\n",
     "The `benchmark` library allows us to change the constraints for the optimization problem. Additionally, the `benchmark` library allows us to change the objective. We can supply an exact or approximate solver. \n",
     "\n",
@@ -754,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 79,
    "id": "548cfb63-1ac3-42f4-92a5-f04e6d08fb7a",
    "metadata": {},
    "outputs": [],
@@ -810,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "id": "ef82f34b-076f-4f83-b01c-0a43007619d0",
    "metadata": {},
    "outputs": [],
@@ -834,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "id": "76898ef3-3da1-46d5-9536-e00b74ad3026",
    "metadata": {},
    "outputs": [
@@ -856,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "id": "bf8303a5-6027-496c-9f8a-3cfe2afd1d85",
    "metadata": {},
    "outputs": [
@@ -887,14 +904,14 @@
    "source": [
     "##### Approximate Solvers \n",
     "\n",
-    "The [Hodrick-Prescott filter](https://en.wikipedia.org/wiki/Hodrick%E2%80%93Prescott_filter) decomposes a time-series into a cyclical component and a trend component. The trend component \n",
+    "The [Hodrick-Prescott filter](https://en.wikipedia.org/wiki/Hodrick%E2%80%93Prescott_filter) decomposes a time-series into a cyclical component and a trend component. The filter removes curvature from the time-series to determine the trend component. \n",
     "\n",
-    "If we take the linear constraint to consist of zeroes, then we remove the linear constraint meaning we omit the benchmark from the optimization problem.  "
+    "We can recover the Hodrick-Prescott filter through a particular combination of objective and constraints. We need to take a linear constraint consisting of zeroes. If we take the linear constraint to consist of zeroes, then we remove the linear constraint meaning we omit the benchmark from the optimization problem. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "id": "df312b4c-b614-4b78-829b-65b6d9c38ce1",
    "metadata": {},
    "outputs": [],
@@ -905,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "0efc97b4-ed65-4ea0-86d3-f79c3f9e2583",
    "metadata": {},
    "outputs": [],
@@ -929,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "id": "29cb91af-6290-4c9a-8142-859e95735fd6",
    "metadata": {},
    "outputs": [
@@ -937,10 +954,10 @@
      "data": {
       "text/plain": [
        "Estimator(linear_constraint=array([0.5, 0.5]), quadratic_constraint_weight=1,\n",
-       "          solver=<function solver at 0x0000025AD845E798>)"
+       "          solver=<function solver at 0x000002A29D372048>)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 34,
    "id": "16b890ea-9e19-4aa5-8475-b1835100c821",
    "metadata": {},
    "outputs": [
@@ -990,7 +1007,9 @@
    "id": "8f45d66d-a83b-47a8-9319-520dc58cf8d6",
    "metadata": {},
    "source": [
-    "#### Tuning\n",
+    "Note that we have a match between the up-sampled data and the Hodrick-Prescott filter implemented in the `statsmodels` library.\n",
+    "\n",
+    "#### Tuning <a name='Tuning'></a>\n",
     "\n",
     "The ability to adjust the linear constraint in the `benchmark` library allows us to programmatically determine the linear constraint. \n",
     "\n",
